--- a/cdk/artifacts/tsconfig.json
+++ b/cdk/artifacts/tsconfig.json
@@ -27,8 +27,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "exclude": ["node_modules", "cdk.out"]
 }
