--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,30 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "extends": ["config:base"],
+  "timezone": "Asia/Tokyo",
+  "reviewers": ["team:administrator-owner", "team:developer-fte"],
+  "labels": ["dependencies", "renovate"],
+  "schedule": ["after 9am on saturday", "before 12am on saturday"],
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0,
+  "separateMinorPatch": true,
+  "dependencyDashboard": true,
+  "automerge": false,
+  "rangeStrategy": "bump",
+  "major": {
+    "stabilityDays": 3
+  },
+  "minor": {
+    "stabilityDays": 1
+  },
+  "patch": {
+    "stabilityDays": 1
+  },
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["patch", "minor"],
+      "excludePackageNames": ["typescript"],
+      "groupName": "minor and patch dependencies"
+    }
   ]
 }
